--- a/client/src/variables.scss
+++ b/client/src/variables.scss
@@ -1,3 +1,4 @@
+
 // Color
 $main-color: #3498db;
 $dim: rgba(0, 0, 0, 0.04);
@@ -41,5 +42,7 @@ $chat-bar-margin: 10px;
     to {
         transform: rotate(360deg);
     }
-  }
-  
+}
+
+// Effect 📸
+$shadow: 0 0 20px $dim;
